feat: generate modern protocol subscriptions
